# demo_scrapy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bleague/: output.json  scrapy.cfg
bleague/bleague/: items.py  middlewares.py  pipelines.py  settings.py
bleague/bleague/spiders/: bleague_match.py
login_form/: scrapy.cfg
login_form/login_form/: items.py  middlewares.py  pipelines.py  settings.py
login_form/login_form/spiders/: login_spider.py
