[project]
name = "demo_scrapy"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)",
    "scrapy-playwright (>=0.0.43,<0.0.44)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
